# projeto-com-vue-e-node

./: README.md  package-lock.json  package.json
cvd-service-paef-guilherme (1)/cvd-service-paef-guilherme/: Dockerfile  docker-compose.yml  index.py  pyproject.toml
cvd-service-paef-guilherme (1)/cvd-service-paef-guilherme/files_csv/: cvd_controle_clientes.csv
cvd-service-paef-guilherme (1)/cvd-service-paef-guilherme/src/assets/css/: converter.css
cvd-service-paef-guilherme (1)/cvd-service-paef-guilherme/src/assets/screen/: upload.html
cvd-service-paef-guilherme (1)/cvd-service-paef-guilherme/src/infrastructure/database/: db_cvd_paef.py
cvd-service-paef-guilherme (1)/cvd-service-paef-guilherme/src/service/: customer_csv_upload.py
cvd-service-paef-guilherme (1)/cvd-service-paef-guilherme/src/temp/: result.py
pevn-be/: .gitignore  app.js  package-lock.json  package.json
pevn-be/controllers/: auth.controller.js  auth.js  professor.controller.js  professor.js  student.controller.js  student.js
pevn-be/database/: db.sql  keys.js
pevn-be/lib/: cloudinary.js
pevn-be/public/: index.html
pevn-be/routes/: auth.routes.js  professor.routes.js  students.routes.js
pevn-be/services/: auth.service.js  professor.service.js  student.service.js
pevn-be/tmp/: tmp-1-1735401091213  tmp-1-1740509664241  tmp-1-1749392791927  tmp-1-1749393905050  tmp-1-1750440678872  tmp-1-1750710270878  tmp-2-1750454794529  tmp-3-1750710343487  tmp-4-1740510672021  tmp-4-1749394219844  tmp-5-1749394233164  tmp-7-1749409595273  tmp-8-1749409688719
src/: main.js
src/router/: index.js
(+9 files in other folders)
